--- a/klases/siuolaikinio-sokio-pamokos.html
+++ b/klases/siuolaikinio-sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jan 06 2025 16:29:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 17 2025 11:32:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674ad95ee29365b448d80118" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -87,7 +87,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <a href="../klases/siuolaikinis-pamokos-paaugliams.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Paaugliams</a>
                                 <a href="../klases/baleto-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">baleto pamokos Suaugusiems</a>
                                 <a href="../klases/siuolaikinio-sokio-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Suaugusiems</a>
-                                <a href="../klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės Saugusiems</a>
+                                <a href="../klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės SUaugusiems</a>
                                 <a href="../klases/sokio-terapija.html" class="nav-dropdown-intro-link w-dropdown-link">Šokio Ir Judesio Terapija</a>
                               </div>
                             </nav>
@@ -346,22 +346,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <div class="text-white">Antradieniais</div>
                         </div>
                         <div id="w-node-d4041d12-f4fd-9903-66cc-16b24182a1fd-48d80118" class="class_schedule_details">
-                          <div class="text-white">19:00 - 19:50</div>
+                          <div class="text-white">18:30 - 19:20</div>
                         </div>
                         <div id="w-node-_0e64a590-699b-d0a7-8e94-8be6e408e5b5-48d80118" class="class_schedule_details">
-                          <div class="text-white">50min</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="class_schedule_wrapper">
-                      <div class="class_schedule_content">
-                        <div id="w-node-d3dd8216-33c9-f889-a0ee-645ec0ab16ad-48d80118" class="class_schedule_details">
-                          <div class="text-white">Ketvirtadieniais</div>
-                        </div>
-                        <div id="w-node-d3dd8216-33c9-f889-a0ee-645ec0ab16b0-48d80118" class="class_schedule_details">
-                          <div class="text-white">19:00 - 19:50</div>
-                        </div>
-                        <div id="w-node-d3dd8216-33c9-f889-a0ee-645ec0ab16b3-48d80118" class="class_schedule_details">
                           <div class="text-white">50min</div>
                         </div>
                       </div>
@@ -413,7 +400,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                       <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="El. Paštas" type="email" id="Email-7" required="">
                                     </div>
                                     <div id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc6-ad843808" class="field-block">
-                                      <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone">
+                                      <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas*</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone" required="">
                                     </div>
                                     <div class="field-block">
                                       <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-3" name="Message" maxlength="5000" data-name="Message" placeholder="Žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
