--- a/klases/siuolaikinis-pamokos-paaugliams.html
+++ b/klases/siuolaikinis-pamokos-paaugliams.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 12:15:15 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 17 2025 11:32:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674adddad95a11907f78cf5d" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -87,7 +87,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <a href="../klases/siuolaikinis-pamokos-paaugliams.html" aria-current="page" class="nav-dropdown-intro-link w-dropdown-link w--current">Šiuolaikinio Šokio Pamokos Paaugliams</a>
                                 <a href="../klases/baleto-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">baleto pamokos Suaugusiems</a>
                                 <a href="../klases/siuolaikinio-sokio-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Suaugusiems</a>
-                                <a href="../klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės Saugusiems</a>
+                                <a href="../klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės SUaugusiems</a>
                                 <a href="../klases/sokio-terapija.html" class="nav-dropdown-intro-link w-dropdown-link">Šokio Ir Judesio Terapija</a>
                               </div>
                             </nav>
@@ -219,7 +219,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div data-w-id="796d92aa-f8a7-0728-fa28-252c6cf4364b" style="opacity:0" class="data-wrap">
                 <div class="category-details">
                   <a href="../sokio-pamokos.html" class="underline-banner-link w-inline-block">
-                    <div class="text-white">9-16 metų (PRO)</div>
+                    <div class="text-white">9-16 metų (advanced)</div>
                     <div class="hover-line">
                       <div class="hover-line-fill-2"></div>
                     </div>
@@ -230,10 +230,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="duration-wrapper">
                   <div class="time-icon"></div>
-                  <div class="subtitle-data text-white">50 min</div>
+                  <div class="subtitle-data text-white">90 min</div>
                 </div>
               </div>
-              <h1 data-w-id="796d92aa-f8a7-0728-fa28-252c6cf43659" style="opacity:0" class="blog-details-title">Šiuolaikinio Šokio Pamokos PAAUGLIAMS <br>(PRO)</h1>
+              <h1 data-w-id="796d92aa-f8a7-0728-fa28-252c6cf43659" style="opacity:0" class="blog-details-title">Šiuolaikinio Šokio Pamokos PAAUGLIAMS <br>(Advanced)</h1>
               <p data-w-id="0ca0287f-d16e-d42c-de3f-5a61f2252e65" class="banner-class-description">Šiuolaikinio šokio pamokos skirtos 9-16 metų paaugliams. Šios pamokos skirtos pažengusiems.<br><br>Pamoku metu šokėjai tobulins techniką, tyrinės dinamiškus judesius ir stiprins saviraišką. Užsiėmimai iššūkį kelia sudėtinga choreografija, improvizacijos pratimais ir įvairių stilių deriniais, skatindami kūrybiškumą ir meninį augimą. <br><br>Puikiai tinka aistringiems paaugliams, pasiruošusiems peržengti savo ribas ir pakelti pasirodymų lygį!<br></p>
               <p data-w-id="db96a5f7-f471-57c7-e8ed-fafa47b46bb5" style="opacity:0" class="banner-class-description"> <br>Pamokos vyksta du kartus per savaitę antradieniais ir ketvirtadieniais.</p>
             </div>
@@ -341,27 +341,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                     <div class="class_schedule_wrapper">
                       <div class="class_schedule_content">
-                        <div id="w-node-_5677806f-2566-bc11-4bd0-5d84a361a750-7f78cf5d" class="class_schedule_details">
-                          <div class="text-white">Antradieniais</div>
-                        </div>
-                        <div id="w-node-d4041d12-f4fd-9903-66cc-16b24182a1fd-7f78cf5d" class="class_schedule_details">
-                          <div class="text-white">19:00 - 19:50</div>
-                        </div>
-                        <div id="w-node-_0e64a590-699b-d0a7-8e94-8be6e408e5b5-7f78cf5d" class="class_schedule_details">
-                          <div class="text-white">50min</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="class_schedule_wrapper">
-                      <div class="class_schedule_content">
                         <div id="w-node-d3dd8216-33c9-f889-a0ee-645ec0ab16ad-7f78cf5d" class="class_schedule_details">
-                          <div class="text-white">Ketvirtadieniais</div>
+                          <div class="text-white">Penktadieniais</div>
                         </div>
                         <div id="w-node-d3dd8216-33c9-f889-a0ee-645ec0ab16b0-7f78cf5d" class="class_schedule_details">
-                          <div class="text-white">19:00 - 19:50</div>
+                          <div class="text-white">17:30 - 19:00</div>
                         </div>
                         <div id="w-node-d3dd8216-33c9-f889-a0ee-645ec0ab16b3-7f78cf5d" class="class_schedule_details">
-                          <div class="text-white">50min</div>
+                          <div class="text-white">90min</div>
                         </div>
                       </div>
                     </div>
@@ -412,7 +399,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                       <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="El. Paštas" type="email" id="Email-7" required="">
                                     </div>
                                     <div id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc6-ad843808" class="field-block">
-                                      <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone">
+                                      <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas*</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone" required="">
                                     </div>
                                     <div class="field-block">
                                       <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-3" name="Message" maxlength="5000" data-name="Message" placeholder="Žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
