--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 12:15:15 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 17 2025 11:32:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674829a03ff763632940d900" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                               <a href="klases/siuolaikinis-pamokos-paaugliams.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Paaugliams</a>
                               <a href="klases/baleto-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">baleto pamokos Suaugusiems</a>
                               <a href="klases/siuolaikinio-sokio-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Suaugusiems</a>
-                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės Saugusiems</a>
+                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės SUaugusiems</a>
                               <a href="klases/sokio-terapija.html" class="nav-dropdown-intro-link w-dropdown-link">Šokio Ir Judesio Terapija</a>
                             </div>
                           </nav>
@@ -268,7 +268,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="El. Paštas" type="email" id="Email-7" required="">
                               </div>
                               <div id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc6-ad843808" class="field-block">
-                                <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone">
+                                <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas*</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone" required="">
                               </div>
                               <div class="field-block">
                                 <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-3" name="Message" maxlength="5000" data-name="Message" placeholder="Žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
