--- a/sokio-pamokos.html
+++ b/sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 12:15:15 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 17 2025 11:32:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdb82" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -87,7 +87,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                               <a href="klases/siuolaikinis-pamokos-paaugliams.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Paaugliams</a>
                               <a href="klases/baleto-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">baleto pamokos Suaugusiems</a>
                               <a href="klases/siuolaikinio-sokio-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Suaugusiems</a>
-                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės Saugusiems</a>
+                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės SUaugusiems</a>
                               <a href="klases/sokio-terapija.html" class="nav-dropdown-intro-link w-dropdown-link">Šokio Ir Judesio Terapija</a>
                             </div>
                           </nav>
@@ -237,7 +237,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676bd-431bdb82" class="banner-hero-content">
         <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676be-431bdb82" class="hero-top">
           <div class="hero-intro">
-            <h1 data-w-id="b10566e5-96f8-834d-eee0-44cdabe676c0" style="opacity:0" class="title-3 class-2-title">Šokio pamokos vaikams ir suaugusiems Vilniuje</h1>
+            <h1 data-w-id="b10566e5-96f8-834d-eee0-44cdabe676c0" style="opacity:0" class="title-3 class-2-title">Šokio pamokos vaikams ir suaugusiems</h1>
           </div>
         </div>
       </div>
