--- a/sokiu-studijos-nuoma-vilniuje.html
+++ b/sokiu-studijos-nuoma-vilniuje.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 12:15:15 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 17 2025 11:32:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674949cd74a9a24b9e488981" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                               <a href="klases/siuolaikinis-pamokos-paaugliams.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Paaugliams</a>
                               <a href="klases/baleto-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">baleto pamokos Suaugusiems</a>
                               <a href="klases/siuolaikinio-sokio-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Suaugusiems</a>
-                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės Saugusiems</a>
+                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės SUaugusiems</a>
                               <a href="klases/sokio-terapija.html" class="nav-dropdown-intro-link w-dropdown-link">Šokio Ir Judesio Terapija</a>
                             </div>
                           </nav>
