--- a/tvarkarastis.html
+++ b/tvarkarastis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 12:15:15 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 17 2025 11:32:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdbad" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                               <a href="klases/siuolaikinis-pamokos-paaugliams.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Paaugliams</a>
                               <a href="klases/baleto-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">baleto pamokos Suaugusiems</a>
                               <a href="klases/siuolaikinio-sokio-pamokos-suaugusiems.html" class="nav-dropdown-intro-link w-dropdown-link">Šiuolaikinio Šokio Pamokos Suaugusiems</a>
-                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės Saugusiems</a>
+                              <a href="klases/mobilumo-treniruotes.html" class="nav-dropdown-intro-link w-dropdown-link">Mobilumo ir Lankstumo Treniruotės SUaugusiems</a>
                               <a href="klases/sokio-terapija.html" class="nav-dropdown-intro-link w-dropdown-link">Šokio Ir Judesio Terapija</a>
                             </div>
                           </nav>
@@ -373,13 +373,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <div class="text-white">Antradienis</div>
                         </div>
                         <div id="w-node-_6105dd03-2cdd-998c-083a-12a4c7d347c8-431bdbad" class="class_schedule_details">
-                          <div class="text-white">19:00-19:50</div>
+                          <div class="text-white">18:30-19:20</div>
                         </div>
                         <div id="w-node-_6105dd03-2cdd-998c-083a-12a4c7d347cb-431bdbad" class="class_schedule_details">
                           <div class="text-white">Šiuolaikinis Šokis Vaikams (7-9m)</div>
                         </div>
                         <div id="w-node-_6105dd03-2cdd-998c-083a-12a4c7d347ce-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Eglė Kraujalė</div>
+                          <div class="text-white">Jolita Svidraitė</div>
                         </div>
                       </div>
                     </div>
@@ -433,30 +433,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                     <div class="class_schedule_wrapper">
                       <div class="class_schedule_content_tvark schedule_page">
-                        <div id="w-node-_5e0ef21d-0fb5-6653-e316-508067d4285c-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Ketvirtadienis</div>
-                        </div>
-                        <div id="w-node-_5e0ef21d-0fb5-6653-e316-508067d4285f-431bdbad" class="class_schedule_details">
-                          <div class="text-white">19:00-19:50</div>
-                        </div>
-                        <div id="w-node-_5e0ef21d-0fb5-6653-e316-508067d42862-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Šiuolaikinis Šokis Vaikams (7-9m)</div>
-                        </div>
-                        <div id="w-node-_5e0ef21d-0fb5-6653-e316-508067d42865-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Eglė Kraujalė</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="class_schedule_wrapper">
-                      <div class="class_schedule_content_tvark schedule_page">
                         <div id="w-node-c38c351f-b38e-07cd-d09e-f981a34acf0f-431bdbad" class="class_schedule_details">
                           <div class="text-white">Penktadienis</div>
                         </div>
                         <div id="w-node-c38c351f-b38e-07cd-d09e-f981a34acf12-431bdbad" class="class_schedule_details">
-                          <div class="text-white">16:00-17:30</div>
+                          <div class="text-white">17:30-19:00</div>
                         </div>
                         <div id="w-node-c38c351f-b38e-07cd-d09e-f981a34acf15-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Šiuolaikinis Šokis Paaugliams (pro)</div>
+                          <div class="text-white">Šiuolaikinis Šokis Paaugliams (advanced)</div>
                         </div>
                         <div id="w-node-c38c351f-b38e-07cd-d09e-f981a34acf18-431bdbad" class="class_schedule_details">
                           <div class="text-white">Jolita Svidraitė</div>
