--- a/uzsiemimai/siuolaikinio-sokio-pamokos.html
+++ b/uzsiemimai/siuolaikinio-sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jan 20 2025 15:38:11 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="675acf2ba4a4cdeeb683340d" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -99,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="../sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="../kontaktai.html" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
