--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jan 20 2025 15:38:11 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674829a03ff763632940d900" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="kontaktai.html" aria-current="page" class="link-header-item w-inline-block w--current">
+                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -347,7 +347,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <div class="contact_map_inner">
                                   <div id="w-node-_19a8903f-62d2-1c4c-d486-ef6c7a8912a0-2940d900" class="team-intro-card---right">
                                     <div class="text-align-right w-richtext">
-                                      <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br>Einant Manufaktūrų gatve pasukt į kaire ties pastatu su Harley Davidson logotipu. <br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
+                                      <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br>Einant Manufaktūrų gatve pasukt į kairę ties pastatu su Harley Davidson logotipu. <br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
                                         <a href="https://maps.app.goo.gl/pkjAKBXXCirLnpq78" target="_blank">Google žemelapio nuoroda</a>
                                       </p>
                                     </div>
