--- a/sokiu-pamoku-kainos.html
+++ b/sokiu-pamoku-kainos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jan 20 2025 15:38:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdbab" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" aria-current="page" class="link-header-item w-inline-block w--current">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="kontaktai.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -222,99 +222,93 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
           </div>
           <div class="pricing-grid">
-            <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f7849-431bdbab" class="pricing-grid">
-              <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f784a-431bdbab" class="mokejimai-grid">
-                <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f784b-431bdbab" class="project-collection-item-2">
-                  <div class="event-verticle-card price-item">
-                    <div class="verticle-card-image">
-                      <div class="price-hero-category">
-                        <p class="price-category">Intro</p>
-                      </div>
-                      <div class="kaina_avatar"></div>
+            <div id="w-node-_31c33ca7-1336-fb49-9fa0-7df43db617e0-431bdbab" class="kainos-grid grupines">
+              <div id="w-node-_88e80819-a4a3-ff00-dea2-54bca06d1b86-431bdbab" class="project-collection-item-2">
+                <div data-w-id="c94edb3a-64a4-4721-e142-925eba59da50" class="event-verticle-card price-item">
+                  <div class="verticle-card-image">
+                    <div class="price-hero-category">
+                      <p class="price-category">Intro</p>
                     </div>
-                    <div class="vacation-card-bottom">
-                      <div class="vacation-card-price-info">
-                        <h3 class="pricing-title">€40<span class="weekly">/mėn</span></h3>
-                        <h5 class="features-title">Intro narystė</h5>
-                        <ul role="list" class="pricing-hero-list">
-                          <li class="price-list-item">
-                            <p id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f785c-431bdbab" class="price-list-description">1 pamoka per savaitę</p>
-                          </li>
-                          <li class="price-list-item">
-                            <p id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f785f-431bdbab" class="price-list-description">4 pamokos per mėnesį</p>
-                          </li>
-                        </ul>
-                      </div>
-                      <a href="https://buy.stripe.com/5kA6rt0TlbjZ9dm5kl" class="black-form-button w-button">saugiai apmokėti</a>
+                    <div class="kaina_avatar"></div>
+                  </div>
+                  <div class="vacation-card-bottom">
+                    <div class="vacation-card-price-info">
+                      <h3 class="pricing-title">€40<span class="weekly">/mėn</span></h3>
+                      <h5 class="features-title">Intro narystė</h5>
+                      <ul role="list" class="pricing-hero-list">
+                        <li class="price-list-item">
+                          <p id="w-node-c94edb3a-64a4-4721-e142-925eba59da6c-431bdbab" class="price-list-description">1 pamoka per savaitę</p>
+                        </li>
+                        <li class="price-list-item">
+                          <p id="w-node-_0eb594e2-8f8a-3cd0-6f63-fafbb4c9c425-431bdbab" class="price-list-description">4 pamokos per mėnesį</p>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
-                <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f7863-431bdbab" class="project-collection-item-2">
-                  <div class="event-verticle-card price-item">
-                    <div class="verticle-card-image">
-                      <div class="price-hero-category">
-                        <p class="price-category">pilna</p>
-                      </div>
-                      <div class="kaina_avatar pink"></div>
+              </div>
+              <div id="w-node-_9b1ed4bf-7773-26a0-3e8f-0bda3a87cb3d-431bdbab" class="project-collection-item-2">
+                <div data-w-id="9b1ed4bf-7773-26a0-3e8f-0bda3a87cb3e" class="event-verticle-card price-item">
+                  <div class="verticle-card-image">
+                    <div class="price-hero-category">
+                      <p class="price-category">pilna</p>
                     </div>
-                    <div class="vacation-card-bottom">
-                      <div class="vacation-card-price-info">
-                        <h3 class="pricing-title">€55<span class="weekly">/mėn</span></h3>
-                        <h5 class="features-title">Pilna narystė</h5>
-                        <ul role="list" class="pricing-hero-list">
-                          <li class="price-list-item">
-                            <p id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f7874-431bdbab" class="price-list-description">2 pamokos per savaitę </p>
-                          </li>
-                          <li class="price-list-item">
-                            <p id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f7877-431bdbab" class="price-list-description">8 pamokos per mėnesį</p>
-                          </li>
-                        </ul>
-                      </div>
-                      <a href="https://buy.stripe.com/5kAaHJgSj87NcpybIL" class="black-form-button w-button">saugiai apmokėti</a>
+                    <div class="kaina_avatar pink"></div>
+                  </div>
+                  <div class="vacation-card-bottom">
+                    <div class="vacation-card-price-info">
+                      <h3 class="pricing-title">€55<span class="weekly">/mėn</span></h3>
+                      <h5 class="features-title">Pilna narystė</h5>
+                      <ul role="list" class="pricing-hero-list">
+                        <li class="price-list-item">
+                          <p id="w-node-_9b1ed4bf-7773-26a0-3e8f-0bda3a87cb77-431bdbab" class="price-list-description">2 pamokos per savaitę </p>
+                        </li>
+                        <li class="price-list-item">
+                          <p id="w-node-_9b1ed4bf-7773-26a0-3e8f-0bda3a87cb7a-431bdbab" class="price-list-description">8 pamokos per mėnesį</p>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
-                <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f787b-431bdbab" class="project-collection-item-2">
-                  <div class="event-verticle-card price-item">
-                    <div class="verticle-card-image">
-                      <div class="price-hero-category">
-                        <p class="price-category">PRO</p>
-                      </div>
-                      <div class="kaina_avatar yellow"></div>
+              </div>
+              <div id="w-node-_3c2f55b9-b126-a0ff-cdd6-5d9d57925861-431bdbab" class="project-collection-item-2">
+                <div data-w-id="3c2f55b9-b126-a0ff-cdd6-5d9d57925862" class="event-verticle-card price-item">
+                  <div class="verticle-card-image">
+                    <div class="price-hero-category">
+                      <p class="price-category">PRO</p>
                     </div>
-                    <div class="vacation-card-bottom">
-                      <div class="vacation-card-price-info">
-                        <h3 class="pricing-title">€85<span class="weekly">/mėn</span></h3>
-                        <h5 class="features-title">Pro narystė</h5>
-                        <ul role="list" class="pricing-hero-list">
-                          <li class="price-list-item">
-                            <p id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f788c-431bdbab" class="price-list-description">Neribotas pamokų kiekis</p>
-                          </li>
-                        </ul>
-                      </div>
-                      <a href="https://buy.stripe.com/00gdTVdG74VBfBK28d" class="black-form-button w-button">saugiai apmokėti</a>
+                    <div class="kaina_avatar yellow"></div>
+                  </div>
+                  <div class="vacation-card-bottom">
+                    <div class="vacation-card-price-info">
+                      <h3 class="pricing-title">€85<span class="weekly">/mėn</span></h3>
+                      <h5 class="features-title">Pro narystė</h5>
+                      <ul role="list" class="pricing-hero-list">
+                        <li class="price-list-item">
+                          <p id="w-node-_3c2f55b9-b126-a0ff-cdd6-5d9d57925872-431bdbab" class="price-list-description">Neribotas pamokų kiekis</p>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
-                <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f7890-431bdbab" class="project-collection-item-2">
-                  <div class="event-verticle-card price-item">
-                    <div class="verticle-card-image">
-                      <div class="price-hero-category">
-                        <p class="price-category">Vienkartinė</p>
-                      </div>
-                      <div class="kaina_avatar grey"></div>
+              </div>
+              <div id="w-node-_05a7f855-c9e7-c987-9961-550f016d2f01-431bdbab" class="project-collection-item-2">
+                <div data-w-id="05a7f855-c9e7-c987-9961-550f016d2f02" class="event-verticle-card price-item">
+                  <div class="verticle-card-image">
+                    <div class="price-hero-category">
+                      <p class="price-category">Vienkartinė</p>
                     </div>
-                    <div class="vacation-card-bottom">
-                      <div class="vacation-card-price-info">
-                        <h3 class="pricing-title">€12<span class="weekly">/kartas</span></h3>
-                        <h5 class="features-title">Vienkartinė narystė</h5>
-                        <ul role="list" class="pricing-hero-list">
-                          <li class="price-list-item">
-                            <p id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f78a1-431bdbab" class="price-list-description">1 pamoka</p>
-                          </li>
-                        </ul>
-                      </div>
-                      <a href="https://buy.stripe.com/00gcPRfOfafVexGfYY" class="black-form-button w-button">saugiai apmokėti</a>
+                    <div class="kaina_avatar grey"></div>
+                  </div>
+                  <div class="vacation-card-bottom">
+                    <div class="vacation-card-price-info">
+                      <h3 class="pricing-title">€12<span class="weekly">/kartas</span></h3>
+                      <h5 class="features-title">Vienkartinė narystė</h5>
+                      <ul role="list" class="pricing-hero-list">
+                        <li class="price-list-item">
+                          <p id="w-node-_05a7f855-c9e7-c987-9961-550f016d2f12-431bdbab" class="price-list-description">1 pamoka</p>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
