--- a/tvarkarastis.html
+++ b/tvarkarastis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jan 20 2025 15:38:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdbad" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="kontaktai.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -273,6 +273,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="tvarkarastis_list">
                     <div class="class_schedule_wrapper">
                       <div class="class_schedule_content_tvark schedule_page">
+                        <div id="w-node-_49fac3a8-1c1b-8e13-e9d4-51c40729c4e1-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Pirmadienis</div>
+                        </div>
+                        <div id="w-node-_49fac3a8-1c1b-8e13-e9d4-51c40729c4e4-431bdbad" class="class_schedule_details">
+                          <div class="text-white">11:00-12:00</div>
+                        </div>
+                        <div id="w-node-d7f841d9-1a2f-2d0e-1bab-bbbf8d5a2659-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Lankstumo Treniruotė Suaugusiems</div>
+                        </div>
+                        <div id="w-node-_780b87a9-1735-9f47-115e-81b244987a9a-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Neringa Masionytė</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="class_schedule_wrapper">
+                      <div class="class_schedule_content_tvark schedule_page">
                         <div id="w-node-f23f6c16-124f-7d2e-949c-2cf0d28694f4-431bdbad" class="class_schedule_details">
                           <div class="text-white">Pirmadienis</div>
                         </div>
@@ -299,6 +315,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <div class="text-white">Baleto Pamokos Vaikams (4-7m)</div>
                         </div>
                         <div id="w-node-cf1e0765-b23c-f550-4235-8a145f8cb328-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Eglė Ukanytė</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="class_schedule_wrapper">
+                      <div class="class_schedule_content_tvark schedule_page">
+                        <div id="w-node-a3eb6c66-5e98-51e3-58c7-2d341148aea9-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Pirmadienis</div>
+                        </div>
+                        <div id="w-node-a3eb6c66-5e98-51e3-58c7-2d341148aeac-431bdbad" class="class_schedule_details">
+                          <div class="text-white">19:30-20:30</div>
+                        </div>
+                        <div id="w-node-a3eb6c66-5e98-51e3-58c7-2d341148aeaf-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Šiuolaikinis Šokis Suaugusiems</div>
+                        </div>
+                        <div id="w-node-a3eb6c66-5e98-51e3-58c7-2d341148aeb5-431bdbad" class="class_schedule_details">
                           <div class="text-white">Eglė Ukanytė</div>
                         </div>
                       </div>
@@ -401,22 +433,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                     <div class="class_schedule_wrapper">
                       <div class="class_schedule_content_tvark schedule_page">
-                        <div id="w-node-_49fac3a8-1c1b-8e13-e9d4-51c40729c4e1-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Ketvirtadienis</div>
-                        </div>
-                        <div id="w-node-_49fac3a8-1c1b-8e13-e9d4-51c40729c4e4-431bdbad" class="class_schedule_details">
-                          <div class="text-white">08:30-09:30</div>
-                        </div>
-                        <div id="w-node-d7f841d9-1a2f-2d0e-1bab-bbbf8d5a2659-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Lankstumo Treniruotė Suaugusiems</div>
-                        </div>
-                        <div id="w-node-_780b87a9-1735-9f47-115e-81b244987a9a-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Neringa Masionytė</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="class_schedule_wrapper">
-                      <div class="class_schedule_content_tvark schedule_page">
                         <div id="w-node-c38c351f-b38e-07cd-d09e-f981a34acf0f-431bdbad" class="class_schedule_details">
                           <div class="text-white">Penktadienis</div>
                         </div>
@@ -444,6 +460,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         </div>
                         <div id="w-node-_9030cf12-8bd5-7883-7abd-8410d3ac1110-431bdbad" class="class_schedule_details">
                           <div class="text-white">Jolita Svidraitė</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="class_schedule_wrapper">
+                      <div class="class_schedule_content_tvark schedule_page">
+                        <div id="w-node-_353cc30b-ccc8-e35a-5fd1-efde06ebae40-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Sekmadienis</div>
+                        </div>
+                        <div id="w-node-_353cc30b-ccc8-e35a-5fd1-efde06ebae43-431bdbad" class="class_schedule_details">
+                          <div class="text-white">18:00-19:15</div>
+                        </div>
+                        <div id="w-node-_353cc30b-ccc8-e35a-5fd1-efde06ebae46-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Šokio ir Judesio Terapija</div>
+                        </div>
+                        <div id="w-node-_353cc30b-ccc8-e35a-5fd1-efde06ebae49-431bdbad" class="class_schedule_details">
+                          <div class="text-white">Eglė Kraujalė</div>
                         </div>
                       </div>
                     </div>
